--- a/HomeSchoolInteraction/html/Course/courseIndex.html
+++ b/HomeSchoolInteraction/html/Course/courseIndex.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
+		<header class="mui-bar mui-bar-nav" style="background-color:#00CFBD;">
 			<a href="javascript:mine.isMineShow=true;" class="mui-icon  mui-pull-left"><img style="width: 26px;height: 26px;border-radius: 50%;" src="../../img/login/headImg.png" /></a>
 			<h1 class="mui-title common-color-white common-font-family-Bold" style="color: white;">课程</h1>
 		</header>
