--- a/HomeSchoolInteraction/html/homeSchool/addNotice.html
+++ b/HomeSchoolInteraction/html/homeSchool/addNotice.html
@@ -22,7 +22,7 @@
 	</head>
 
 	<body style="background: white;">
-		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="tempVue">
+		<header class="mui-bar mui-bar-nav" style="background-color:#00CFBD;" id="tempVue">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">新建通知</h1>
 			<a @click="addNotice()" class="mui-pull-right" style="color: white;font-size: 15px;margin-top: 10px;">发布</a>
