--- a/HomeSchoolInteraction/html/homeSchool/notice_parentsList.html
+++ b/HomeSchoolInteraction/html/homeSchool/notice_parentsList.html
@@ -34,11 +34,13 @@
 			.flex-container .flex-item:last-child {
 				background-color: white;
 			}
-			.className{
+			
+			.className {
 				font-size: 16px;
 				color: #333333;
 			}
-			.stuName{
+			
+			.stuName {
 				font-size: 15px;
 				color: #666666;
 				width: 150px;
@@ -47,7 +49,7 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;" id="tempVue">
+		<header class="mui-bar mui-bar-nav" style="background-color:#00CFBD;" id="tempVue">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">选择家长</h1>
 			<a @click="addNotice()" class="mui-pull-right" style="color: white;font-size: 15px;margin-top: 10px;">确定</a>
@@ -100,21 +102,17 @@
 			var personal = store.get(window.storageKeyName.PERSONALINFO);
 			console.log('personal:' + JSON.stringify(personal));
 			var publicParameter = store.get(window.storageKeyName.PUBLICPARAMETER);
+			var parentsArray = []; //所选家长列表
+			var tempArr = [];
 			mui.plusReady(function() {
 				curPage = utils.getDataFromUrl(window.location.href);
 				console.log('2222:' + JSON.stringify(curPage));
+				parentsArray = curPage.parentArray;
 				//将ids分割成数组
-				var tempArr = curPage.classIDs.split(",");
-				for (var i = 0; i < tempArr.length; i++) {
-					var tempModel = {
-						clsid:tempArr[i],
-						flag:0,
-						stuArray:[]
-					}
-					classListData.classListArray.push(tempModel);
-				}
-				//6.学校班级学生,获取选择班级中对应的人
-				getClassParents(curPage.classIDs);
+				tempArr = curPage.classIDs.split(",");
+
+				//4.学校班级
+				getClassList();
 			});
 
 			//页面总数据
@@ -224,15 +222,15 @@
 								}
 							}
 						}
-						if (tempStuArray.length>0) {
-							tempStu=tempStu.substr(1);
-						}else{
+						if(tempStuArray.length > 0) {
+							tempStu = tempStu.substr(1);
+						} else {
 							mui.toast('请选择年级、班级');
 							return;
 						}
-						
+
 						mui.fire(plus.webview.currentWebview().opener(), 'selectStudents', {
-							parentsShow:tempStu,
+							parentsShow: tempStu,
 							parentsArray: tempStuArray
 						});
 						mui.back();
@@ -240,8 +238,40 @@
 				}
 			});
 
+			//4.学校班级
+			var getClassList = function() {
+				var enData0 = {};
+				//不需要加密的数据
+				var comData0 = {
+					uuid: publicParameter.uuid, //用户设备号
+					utoken: personal.utoken, //用户令牌
+					appid: publicParameter.appid, //系统所分配的应用ID
+					isfinish: 0 //是否已毕业，0未毕业,1已毕业,-1全部
+				}
+				events.showWaiting();
+				//发送网络请求，data为网络返回值
+				postDataEncry('SchClass', enData0, comData0, 0, function(data) {
+					events.closeWaiting();
+					if(data.RspCode == 0) {
+						for(var i = 0; i < data.RspData.clss.length; i++) {
+							var tempClassModel = data.RspData.clss[i];
+							for(var m = 0; m < tempArr.length; m++) {
+								if(tempClassModel.clsid == tempArr[m]) {
+									tempClassModel.flag = 0;
+									tempClassModel.stuArray = [];
+									classListData.classListArray.push(tempClassModel);
+								}
+							}
+						} //6.学校班级学生,获取选择班级中对应的人
+						getClassParents(curPage.classIDs);
+					} else {
+						mui.toast(data.RspTxt, "cancel");
+					}
+				});
+			}
+
 			//6.学校班级学生,获取选择班级中对应的人
-			var getClassParents = function(classids){
+			var getClassParents = function(classids) {
 				var enData0 = {};
 				//不需要加密的数据
 				var comData0 = {
@@ -255,23 +285,65 @@
 				postDataEncry('ClassStu', enData0, comData0, 0, function(data) {
 					events.closeWaiting();
 					if(data.RspCode == 0) {
-						classListData.flag=1;
+						classListData.flag = 1;
 						console.log('data:' + JSON.stringify(data));
-						for (var i = 0; i < data.RspData.clssstus.length; i++) {
+						for(var i = 0; i < data.RspData.clssstus.length; i++) {
 							var stuModel = data.RspData.clssstus[i];
-							stuModel.flag = 0;
-							for (var a = 0; a < classListData.classListArray.length; a++) {
+							//							stuModel.flag = 0;
+							//判断上个界面，是否选择
+							var tempClassFlag = 0;
+							for(var m = 0; m < parentsArray.length; m++) {
+								var tempParentModel = parentsArray[m];
+								if(tempParentModel.stuid == stuModel.stuid) {
+									tempClassFlag++;
+								}
+							}
+							if(tempClassFlag == 0) {
+								stuModel.flag = 0; //默认未选择
+							} else {
+								stuModel.flag = 1; //选择
+							}
+							for(var a = 0; a < classListData.classListArray.length; a++) {
 								var classModel = classListData.classListArray[a];
-								if (classModel.clsid == stuModel.clsid) {
-									classModel = $.extend(classModel, stuModel);
+								if(classModel.clsid == stuModel.clsid) {
+									//									classModel = $.extend(classModel, stuModel);
 									classModel.stuArray.push(stuModel);
 								}
 							}
 						}
+						//刚进入页面得到数据时，判断全部的勾选状态
+						allDataSelect();
 					} else {
 						mui.toast(data.RspTxt, "cancel");
 					}
 				});
+			}
+
+			//刚进入页面得到数据时，判断全部的勾选状态
+			var allDataSelect = function() {
+				var tempFlag = 0;
+				for(var i = 0; i < classListData.classListArray.length; i++) {
+					var classModel = classListData.classListArray[i];
+					var tempFalg0 = 0;
+					//循环得到的班级列表
+					for(var a = 0; a < classModel.stuArray.length; a++) {
+						var stuModel = classModel.stuArray[a];
+						if(stuModel.flag == 1) {
+							tempFalg0++;
+						}
+					}
+					if(tempFalg0 == classModel.stuArray.length) {
+						classModel.flag = 1;
+						tempFlag++;
+					} else {
+						classModel.flag = 0;
+					}
+				}
+				if(tempFlag == classListData.classListArray.length) {
+					classListData.selectFlag = 1;
+				} else {
+					classListData.selectFlag = 0;
+				}
 			}
 		</script>
 	</body>
