--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -105,6 +105,31 @@
 			//判断输入是否符合要求
 			if(checkInput(tempName)) {
 				if(checkInput(tempPW)) {
+					//login登录
+					loginPro(tempName,tempPW);
+				} else {
+
+				}
+			} else {
+
+			}
+		});
+
+		/**
+		 * 获取本地推送标识信息
+		 */
+		function getPushInfo() {
+			var info = plus.push.getClientInfo();
+			outSet("获取客户端推送标识信息：");
+			outLine("id: " + info.id);
+			outLine("token: " + info.token);
+			outLine("clientid: " + info.clientid);
+			outLine("appid: " + info.appid);
+			outLine("appkey: " + info.appkey);
+		}
+		
+		//login登录
+		var loginPro = function(tempName,tempPW){
 					//握手
 					var enData0 = {};
 					//不需要加密的数据
@@ -154,7 +179,24 @@
 									if(data1.RspData.urolestr == null) {
 										data1.RspData.urolestr = '00000000000000000000000000000';
 									}
+									data1.RspData.userName0 = tempName;
+									data1.RspData.password0 = tempPW;
 									store.set(window.storageKeyName.PERSONALINFO, data1.RspData);
+									
+									var info = plus.push.getClientInfo();
+									var tempBindData = {
+										appId: info.appid,
+										alias: data1.RspData.utid,
+										cid: info.clientid
+									}
+									bindPro(tempBindData, function function_name(data) {
+										//									events.closeWaiting();
+										if(data.RspCode == 0) {
+											//										utils.mOpenWithData("../../index.html", {});
+										} else {
+//											mui.toast(data.RspTxt);
+										}
+									});
 									utils.mOpenWithData("../../index.html", {});
 								} else {
 									mui.toast(data1.RspTxt);
@@ -164,13 +206,8 @@
 							mui.toast(data.RspTxt);
 						}
 					});
-				} else {
-
-				}
-			} else {
-
-			}
-		});
+				
+		}
 
 		//从ios原生得到信息
 		var setUUID = function(tempStr) {
@@ -179,39 +216,55 @@
 			console.log('tempStr:' + tempStr);
 			//判断上次是否登录过，自动登录
 			var personal = store.get(window.storageKeyName.PERSONALINFO);
-			
-			//			console.log('personal:' + JSON.parse(personal));
-			if (personal) {
-				if(personal.utid == 'undefined' || personal.utid == null) {
 
-			} else {
-				document.getElementById("account").value = personal.uid;
-			document.getElementById("password").value = '111111';
-				//需要参数
-				var comData = {
-					uuid: tempModel.uuid,
-					utid: personal.utid,
-					utoken: personal.utoken,
-					appid: tempModel.appid,
-					schid: personal.schid,
-					utname: personal.utname
-				};
-				events.showWaiting();
-				//令牌续订
-				postDataEncry('TokenReset', {}, comData, 0, function(data) {
-					events.closeWaiting();
-					if(data.RspCode == 0) {
-						var tempInfo00 = store.get(window.storageKeyName.PERSONALINFO);
-						tempInfo00.utoken = data.RspData;
-						store.set(window.storageKeyName.PERSONALINFO, tempInfo00);
-						utils.mOpenWithData("../../index.html", {});
-					} else {
-						mui.toast(data.RspTxt);
-					}
-				});
+			//			console.log('personal:' + JSON.parse(personal));
+			if(personal) {
+				if(personal.utid == 'undefined' || personal.utid == null|| personal.userName0 == null) {
+
+				} else {
+					document.getElementById("account").value = personal.userName0;
+					document.getElementById("password").value = personal.password0;
+					//login登录
+					loginPro(personal.userName0,personal.password0);
+					//需要参数
+//					var comData = {
+//						uuid: tempModel.uuid,
+//						utid: personal.utid,
+//						utoken: personal.utoken,
+//						appid: tempModel.appid,
+//						schid: personal.schid,
+//						utname: personal.utname
+//					};
+//					events.showWaiting();
+//					//令牌续订
+//					postDataEncry('TokenReset', {}, comData, 0, function(data) {
+//						events.closeWaiting();
+//						if(data.RspCode == 0) {
+//							var tempInfo00 = store.get(window.storageKeyName.PERSONALINFO);
+//							tempInfo00.utoken = data.RspData;
+//							store.set(window.storageKeyName.PERSONALINFO, tempInfo00);
+//							var info = plus.push.getClientInfo();
+//							var tempBindData = {
+//								appId: info.appid,
+//								alias: tempInfo00.utid,
+//								cid: info.clientid
+//							}
+//							bindPro(tempBindData, function function_name(data) {
+//								//									events.closeWaiting();
+//								if(data.RspCode == 0) {
+//									//										utils.mOpenWithData("../../index.html", {});
+//								} else {
+//									mui.toast(data.RspTxt);
+//								}
+//							});
+//							//						utils.mOpenWithData("../../index.html", {});
+//						} else {
+//							mui.toast(data.RspTxt);
+//						}
+//					});
+				}
 			}
-			}
-			
+
 		}
 
 		//判断是否输入了值
