--- a/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
@@ -140,6 +140,11 @@
 			.mui-grid-view {
 				border: 0px;
 			}
+			
+			.mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
+			    color: #00CFBD;
+			    border-bottom: 2px solid #00CFBD;
+			}
 		</style>
 	</head>
 
