--- a/HomeSchoolInteraction/index.html
+++ b/HomeSchoolInteraction/index.html
@@ -13,6 +13,10 @@
 			body {
 				background-color: #efeff4;
 			}
+			
+			.mui-bar-tab .mui-tab-item.mui-active{
+				color:#00CFBD;
+			}
 		</style>
 	</head>
 
