添加推送、科教

--- a/HomeSchoolInteraction/html/homeSchool/gradeList.html
+++ b/HomeSchoolInteraction/html/homeSchool/gradeList.html
@@ -475,7 +475,7 @@
 							tempFalg0++;
 						}
 					}
-					if(tempFalg0 == gradeModel.classArray.length) {
+					if(tempFalg0 == gradeModel.classArray.length&&gradeModel.classArray.length>0) {
 						gradeModel.flag = 1;
 						tempFlag++;
 					} else {
