--- a/HomeSchoolInteraction/html/homeSchool/mine.html
+++ b/HomeSchoolInteraction/html/homeSchool/mine.html
@@ -24,6 +24,9 @@
 				padding: 0;
 			}
 			
+			
+			
+			
 			.title {
 				margin: 35px 15px 10px;
 			}
@@ -70,10 +73,23 @@
 			})
 
 			function closeMenu() {
-				console.log('99999999999');
-				mui.fire(plus.webview.currentWebview().opener(), 'closeMinePage', {});
+//				console.log('99999999999');
+//				mui.fire(plus.webview.currentWebview().opener(), 'closeMinePage', {});
+//				store.remove(window.storageKeyName.PERSONALINFO);
+//				utils.mOpenWithData("../../html/login/loginIndex.html", {});
+
+				//获取所有已打开的webview 实例————重新打开login.html————循环关闭页面
 				store.remove(window.storageKeyName.PERSONALINFO);
-				utils.mOpenWithData("../../html/login/loginIndex.html", {});
+				plus.webview.open('../../html/login/loginIndex.html');
+				var curr = plus.webview.currentWebview();
+				var wvs = plus.webview.all();
+				for (var i = 0, len = wvs.length; i < len; i++) {
+                    //关闭除login页面外的其他页面
+					if (wvs[i].getURL() == curr.getURL())
+						continue;
+					plus.webview.close(wvs[i]);
+				}
+				curr.close();
 			}
 
 			//左滑显示出来的菜单，只需监听右滑，然后将菜单关闭即可；在该菜单上左滑，不做任何操作；
