--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -62,12 +62,13 @@
 		//			
 		//		});
 		var tempModel = {};
+		var loginFlag = 0; //0自动登录，1不自动登录
 		mui.plusReady(function() {
 			tempModel = {
 				uuid: plus.device.uuid,
 				appid: plus.runtime.appid
 			}
-			setUUID();
+//			setUUID();
 		});
 		document.addEventListener("plusready", function() {
 			message = document.getElementById("message");
@@ -113,6 +114,12 @@
 			} else {
 
 			}
+		});
+
+		window.addEventListener('quit', function(data) {
+			console.log("data" + JSON.stringify(data.detail));
+			var tempData = data.detail;
+			loginFlag = 1;
 		});
 
 		/**
@@ -222,63 +229,66 @@
 
 		//从ios原生得到信息
 		var setUUID = function(tempStr) {
-			//			var tempModel0 = $.parseJSON(tempStr);
-			store.set(window.storageKeyName.PUBLICPARAMETER, tempModel);
-			console.log('tempStr:' + tempStr);
-			//判断上次是否登录过，自动登录
-			var personal = store.get(window.storageKeyName.PERSONALINFO);
+			if(loginFlag == 0) {
+				//			var tempModel0 = $.parseJSON(tempStr);
+				store.set(window.storageKeyName.PUBLICPARAMETER, tempModel);
+				console.log('tempStr:' + tempStr);
+				//判断上次是否登录过，自动登录
+				var personal = store.get(window.storageKeyName.PERSONALINFO);
 
-			//			console.log('personal:' + JSON.parse(personal));
-			if(personal) {
-				if(personal.utid == 'undefined' || personal.utid == null || personal.userName0 == null) {
-					//login登录
-					loginPro('00000000000', '123');
+				//			console.log('personal:' + JSON.parse(personal));
+				if(personal) {
+					if(personal.utid == 'undefined' || personal.utid == null || personal.userName0 == null) {
+						//login登录
+						loginPro('00000000000', '123');
+					} else {
+						document.getElementById("account").value = personal.userName0;
+						document.getElementById("password").value = personal.password0;
+						//login登录
+						loginPro(personal.userName0, personal.password0);
+						//需要参数
+						//					var comData = {
+						//						uuid: tempModel.uuid,
+						//						utid: personal.utid,
+						//						utoken: personal.utoken,
+						//						appid: tempModel.appid,
+						//						schid: personal.schid,
+						//						utname: personal.utname
+						//					};
+						//					events.showWaiting();
+						//					//令牌续订
+						//					postDataEncry('TokenReset', {}, comData, 0, function(data) {
+						//						events.closeWaiting();
+						//						if(data.RspCode == 0) {
+						//							var tempInfo00 = store.get(window.storageKeyName.PERSONALINFO);
+						//							tempInfo00.utoken = data.RspData;
+						//							store.set(window.storageKeyName.PERSONALINFO, tempInfo00);
+						//							var info = plus.push.getClientInfo();
+						//							var tempBindData = {
+						//								appId: info.appid,
+						//								alias: tempInfo00.utid,
+						//								cid: info.clientid
+						//							}
+						//							bindPro(tempBindData, function function_name(data) {
+						//								//									events.closeWaiting();
+						//								if(data.RspCode == 0) {
+						//									//										utils.mOpenWithData("../../index.html", {});
+						//								} else {
+						//									mui.toast(data.RspTxt);
+						//								}
+						//							});
+						//							//						utils.mOpenWithData("../../index.html", {});
+						//						} else {
+						//							mui.toast(data.RspTxt);
+						//						}
+						//					});
+					}
 				} else {
-					document.getElementById("account").value = personal.userName0;
-					document.getElementById("password").value = personal.password0;
-					//login登录
-					loginPro(personal.userName0, personal.password0);
-					//需要参数
-					//					var comData = {
-					//						uuid: tempModel.uuid,
-					//						utid: personal.utid,
-					//						utoken: personal.utoken,
-					//						appid: tempModel.appid,
-					//						schid: personal.schid,
-					//						utname: personal.utname
-					//					};
-					//					events.showWaiting();
-					//					//令牌续订
-					//					postDataEncry('TokenReset', {}, comData, 0, function(data) {
-					//						events.closeWaiting();
-					//						if(data.RspCode == 0) {
-					//							var tempInfo00 = store.get(window.storageKeyName.PERSONALINFO);
-					//							tempInfo00.utoken = data.RspData;
-					//							store.set(window.storageKeyName.PERSONALINFO, tempInfo00);
-					//							var info = plus.push.getClientInfo();
-					//							var tempBindData = {
-					//								appId: info.appid,
-					//								alias: tempInfo00.utid,
-					//								cid: info.clientid
-					//							}
-					//							bindPro(tempBindData, function function_name(data) {
-					//								//									events.closeWaiting();
-					//								if(data.RspCode == 0) {
-					//									//										utils.mOpenWithData("../../index.html", {});
-					//								} else {
-					//									mui.toast(data.RspTxt);
-					//								}
-					//							});
-					//							//						utils.mOpenWithData("../../index.html", {});
-					//						} else {
-					//							mui.toast(data.RspTxt);
-					//						}
-					//					});
+					loginPro('00000000000', '000000');
 				}
-			}else{
-				loginPro('00000000000', '000000');
-			}
+			} else {
 
+			}
 		}
 
 		//判断是否输入了值
